<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableRow
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_foreground"
            android:drawablePadding="-20dp"
            android:gravity="center"
            android:text="@string/auto_asistencija"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/detekcija_kvara"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/detekcija_kvara"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="25dp"
            android:onClick="detekcijaKvara"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/provjeri_sam"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/provjeri_sam"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="25dp"
            android:onClick="provjeriSam"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/pronadi_servis"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pronadi_servis"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="25dp"
            android:onClick="pronadiServis"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/akcije"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/akcije"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="25dp"
            android:onClick="akcije"/>

    </TableRow>

</TableLayout>